# pyqt5-concurrent

./: LICENSE  README.md  pdm.toml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/concurrent_/: taskManager.py
src/pyqt5_concurrent/: Future.py  Qt.py  Task.py  TaskExecutor.py  __init__.py  future.py  qt.py  task.py  taskExecutor.py  taskManager.py
tests/: baidu.html  concurrent_sync_test.py  concurrent_test.py  future_cancel_test.py  priority_test.py  qt.py  task_error_test.py  with_test.py
