[project]
name = "pyqt5-concurrent"
version = "0.1.0"
description = "QThreadPool based task concurrency library in pyqt5"
authors = [
    {name = "AresConnor", email = "aresconnor867@gmail.com"},
]
dependencies = [
    "pyqt5>=5.15.10",
    "pyqt5-qt5==5.15.2",
]
requires-python = ">=3.7,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
